# blog-api

./: '  .gitignore  Cargo.toml
migrations/2022-08-04-153752_create_posts/: down.sql  up.sql
migrations/2022-08-04-160307_create_users/: down.sql  up.sql
migrations/2022-08-24-170910_add_user_id_for_posts/: down.sql  up.sql
src/: app_config.rs  exceptions.rs  main.rs  schema.rs
src/controllers/: users_controller.rs
src/daos/: mod.rs  post_dao.rs  user_dao.rs  user_token_dao.rs
src/dtos/: mod.rs  post_creation_dto.rs  post_dto.rs  user_created_dto.rs  user_creation_dto.rs  user_signing_in_dto.rs  user_token_created_dto.rs  user_token_creation_dto.rs
src/middlewares/: authentication.rs  mod.rs
src/models/: mod.rs  post.rs  user.rs  user_token.rs
src/services/: mod.rs  user_creation_service.rs  user_signing_in_service.rs
