[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.13.2"
derive_more = "0.99.17"
diesel = { version = "1.4", features = ["chrono", "mysql", "r2d2"] } 
diesel-derive-enum = { version = "1", features = ["mysql"] }
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["v4"] }

